--- a/project-management-app/package.json
+++ b/project-management-app/package.json
@@ -31,6 +31,11 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/component-store": "^14.3.2",
+    "@ngrx/effects": "^14.3.2",
+    "@ngrx/router-store": "^14.3.2",
+    "@ngrx/store": "^14.3.2",
+    "@ngrx/store-devtools": "^14.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -44,6 +49,8 @@
     "@angular-eslint/template-parser": "14.1.2",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@angular/language-service": "^14.2.8",
+    "@ngrx/eslint-plugin": "^14.3.2",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
