--- a/project-management-app/package.json
+++ b/project-management-app/package.json
@@ -50,6 +50,7 @@
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
     "@angular/language-service": "^14.2.8",
+    "@angular/localize": "^14.2.7",
     "@ngrx/eslint-plugin": "^14.3.2",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
