feat: add built project

--- a/project-management-app/angular.json
+++ b/project-management-app/angular.json
@@ -26,7 +26,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "localize": true,
+            "outputPath": "dist/project-management-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
