--- a/project-management-app/angular.json
+++ b/project-management-app/angular.json
@@ -26,6 +26,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "localize": true,
             "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
